tests/auto/widgets/kernel/qwidget_window/qwidget_window.pro
@@ -1,7 +1,7 @@
 CONFIG += testcase
 CONFIG += parallel_test
 TARGET = tst_qwidget_window
-QT += widgets testlib
+QT += widgets testlib core-private gui-private
 SOURCES  += tst_qwidget_window.cpp
 
 x11 {
